삼립 index 복구 작업 및 footer 시작

--- a/figma_layout/samlip/company.html
+++ b/figma_layout/samlip/company.html
@@ -19,6 +19,7 @@
 <body>
     <div id="wrap">
         <!-- header -->
+        <?php include('./header.php') ?>
         <main>
             <!-- company 작성 -->
             <div id="path"> <!-- 우측 정렬 -->
