--- a/figma_layout/samlip/index.html
+++ b/figma_layout/samlip/index.html
@@ -19,65 +19,9 @@
 <body>
     <div id="wrap">
         <!-- header -->
-        <header>
-            <h1><a href="./index.html"><img src="./images/logo_black.png" alt="SPC삼립"></a></h1>
-            <nav>
-                <ul class="gnb">
-                    <li><a href="#">COMPANY</a></li>
-                    <li><a href="#">BRANDS</a></li>
-                    <li>
-                        <a href="#">IR</a>
-                        <ul class="lnb">
-                            <li><a href="#">기업지배구조</a>
-                                <ul class="lnb_dth2">
-                                    <li><a href="#">이사회</a></li>
-                                    <li><a href="#">이사회 내 위원회</a></li>
-                                    <li><a href="#">주주총회</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">재무정보</a>
-                                <ul class="lnb_dth2">
-                                    <li><a href="#">재무상태표</a></li>
-                                    <li><a href="#">손익계산서</a></li>
-                                    <li><a href="#">현금흐름표</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">주식정보</a>
-                                <ul class="lnb_dth2">
-                                    <li><a href="#">공시</a></li>
-                                    <li><a href="#">실시간 주가정보</a></li>
-                                    <li><a href="#">배당현황</a></li>
-                                    <li><a href="#">공시정보관리규정</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                    <li><a href="#">SNS</a></li>
-                    <li><a href="#">RECRUIT</a>
-                        <ul class="lnb">
-                            <li><a href="#">인사제도</a></li>
-                            <li><a href="#">입사지원</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">STORE</a></li>
-                </ul>
-            </nav>
-            <ul class="right_menu">
-                <li><a href="#">CUSTOMER</a></li>
-                <li>
-                    <a href="#"><img src="./images/lang_kr.png" alt="한국어보기"></a>
-                    <!-- 마우스 올릴 시 보이는 영역 -->
-                    <div class="lang_sel">
-                        <a href="#" class="kr">KR</a>
-                        <a href="#" class="en">EN</a>
-                        <a href="#" class="cn">CN</a>
-                    </div>
-                </li>
-                <li><a href="#"><img src="./images/search.png" alt="검색하기"></a></li>
-            </ul>
-        </header>
+            <?php include('./header.php') ?>
         <main>
-        <!-- 고정 페이지 위치 -->
+            <!-- 고정 페이지 위치 -->
             <div class="main_pst_link">
                 <a href=".visual_wrap"><span>main</span><span class="circle"></span></a>
                 <a href="#news"><span>news & notice</span><span class="circle"></span></a>
@@ -85,9 +29,9 @@
                 <a href="#"><span>Our Brands</span><span class="circle"></span></a>
                 <a href="#"><span>Company Info</span><span class="circle"></span></a>
             </div>
-        <!-- 1행 광고배너 -->
+            <!-- 1행 광고배너 -->
             <div class="visual_wrap"> <!-- 뷰포트 너비에서만 보이는 영역 (넘친영역 숨기기)-->
-                <div id="visual_bnr_wrap"> <!-- 개별 배너의 큰 부모 -->
+                <div class="visual_bnr_wrap"> <!-- 개별 배너의 큰 부모 -->
                     <section class="bnr1">
                         <h2>Good Food &<br>Happy Life</h2>
                         <p>좋은 음식과 서비스를 통해 더 가치 있고<br>건강한 삶을 만들어나갑니다</p>
@@ -105,46 +49,55 @@
                         <p>소비자의 취향에 맞는<br>새로운 디저트 문화를 제안합니다</p>
                     </section>
                 </div>
+                <div class="prev_next_wrap">
+                    <a href="#" class="prev"><img src="./images/arrow_next_preview.png" alt="이전"></a>
+                    <a href="#" class="next"><img src="./images/arrow_next_preview.png" alt="이전"></a>
+                </div>
             </div>
-            <h2 id="news">News & notice</h2>
-            <p>SPC Samlip news updates, from a company that is always happy.</p>
             <!-- 2행 뉴스 & 공지사항 -->
-            <ul class="news_notice_wrap">
-                <li>
-                    <a href="#">
-                        <p class="photo"><img src="./images/card_pic_001.png" alt=""></p>
-                        <h3>삼립. '초당 옥수수 미니꿀약과' 출시</h3>
-                    </a>
-                    <p class="date">2025년 08월 22일</p>
-                </li>
-                <li>
-                    <a href="#">
-                        <p class="photo"><img src="./images/card_pic_001.png" alt=""></p>
-                        <h3>삼립, 칼로리·당 없는 ‘얼려먹는 젤리뽀 zero’ 출시</h3>
-                    </a>
-                    <p class="date">2025년 08월 22일</p>
-                </li>
-                <li>
-                    <a href="#">
-                        <p class="photo"><img src="./images/card_pic_001.png" alt=""></p>
-                        <h3>삼립, ‘크보빵’ 1000만개 판매 돌파</h3>
-                    </a>
-                    <p class="date">2025년 08월 22일</p>
-                </li>
-                <li>
-                    <a href="#">
-                        <p class="photo"><img src="./images/card_pic_001.png" alt=""></p>
-                        <h3>삼립. '초당 옥수수 미니꿀약과' 출시</h3>
-                    </a>
-                    <p class="date">2025년 08월 27일</p>
-                </li>
-                </div>
-                <div class="card_btn_wrap">\
-                    <a href="#" class="previous"><img src="./images/arrow_next_preview.png" alt="이전"></a>/div>
-                    <a href="#" class="next"><img src="./images/arrow_next_preview.png" alt="이전"></a>/div>
-                <div class="view_more">
-                    <a href="#"><img src="./images/view_icon.png" alt="더보기"></a>
-                </div>
+                <ul class="news_notice_wrap">
+                    <h2 id="news">News & notice</h2>
+                    <p>SPC Samlip news updates, from a company that is always happy.</p>
+                    <div class="card_wrap">
+                        <div class="car_all">
+                            <li>
+                                <a href="#">
+                                    <p class="photo"><img src="./images/card_pic_001.png" alt=""></p>
+                                    <h3>삼립. '초당 옥수수 미니꿀약과' 출시</h3>
+                                </a>
+                                <p class="date">2025년 08월 22일</p>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <p class="photo"><img src="./images/card_pic_002.png" alt=""></p>
+                                    <h3>삼립, 칼로리·당 없는 ‘얼려먹는 젤리뽀 zero’ 출시</h3>
+                                </a>
+                                <p class="date">2025년 08월 22일</p>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <p class="photo"><img src="./images/card_pic_003.png" alt=""></p>
+                                    <h3>삼립, ‘크보빵’ 1000만개 판매 돌파</h3>
+                                </a>
+                                <p class="date">2025년 08월 22일</p>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <p class="photo"><img src="./images/card_pic_004.png" alt=""></p>
+                                    <h3>삼립. '초당 옥수수 미니꿀약과' 출시</h3>
+                                </a>
+                                <p class="date">2025년 08월 27일</p>
+                            </li>
+                        </div>
+                    </div>
+                    <div class="prev_next_wrap">
+                        <a href="#" class="prev"><img src="./images/arrow_next_preview.png" alt="이전"></a>
+                        <a href="#" class="next"><img src="./images/arrow_next_preview.png" alt="이전"></a>
+                    </div>
+                    <div class="view_all_button">
+                        <a href="#"><img src="./images/view_icon.png" alt="더보기"><span>view all news</span></a>
+                    </div>
+                </ul>
             </div>
         </main>
     </div>
