--- a/figma_layout/samlip/index.html
+++ b/figma_layout/samlip/index.html
@@ -55,51 +55,127 @@
                 </div>
             </div>
             <!-- 2행 뉴스 & 공지사항 -->
-                <ul class="news_notice_wrap">
-                    <h2 id="news">News & notice</h2>
-                    <p>SPC Samlip news updates, from a company that is always happy.</p>
-                    <div class="card_wrap">
-                        <div class="car_all">
-                            <li>
-                                <a href="#">
-                                    <p class="photo"><img src="./images/card_pic_001.png" alt=""></p>
-                                    <h3>삼립. '초당 옥수수 미니꿀약과' 출시</h3>
-                                </a>
+            <ul class="news_notice_wrap">
+                <h2 id="news">News & notice</h2>
+                <p>SPC Samlip news updates, from a company that is always happy.</p>
+                <div class="card_wrap">
+                    <ul class="car_all">
+                        <li>
+                            <a href="#">
+                                <p class="photo"><img src="./images/card_pic_001.png" alt=""></p>
+                                <h3>삼립. '초당 옥수수 미니꿀약과' 출시</h3>
                                 <p class="date">2025년 08월 22일</p>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <p class="photo"><img src="./images/card_pic_002.png" alt=""></p>
-                                    <h3>삼립, 칼로리·당 없는 ‘얼려먹는 젤리뽀 zero’ 출시</h3>
-                                </a>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p class="photo"><img src="./images/card_pic_002.png" alt=""></p>
+                                <h3>삼립, 칼로리·당 없는 ‘얼려먹는 젤리뽀 zero’ 출시</h3>
                                 <p class="date">2025년 08월 22일</p>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <p class="photo"><img src="./images/card_pic_003.png" alt=""></p>
-                                    <h3>삼립, ‘크보빵’ 1000만개 판매 돌파</h3>
-                                </a>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p class="photo"><img src="./images/card_pic_003.png" alt=""></p>
+                                <h3>삼립, ‘크보빵’ 1000만개 판매 돌파</h3>
                                 <p class="date">2025년 08월 22일</p>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <p class="photo"><img src="./images/card_pic_004.png" alt=""></p>
-                                    <h3>삼립. '초당 옥수수 미니꿀약과' 출시</h3>
-                                </a>
-                                <p class="date">2025년 08월 27일</p>
-                            </li>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p class="photo"><img src="./images/card_pic_004.png" alt=""></p>
+                                <h3>삼립. '초당 옥수수 미니꿀약과' 출시</h3>
+                                <p class="date">2025년 08월 22일</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p class="photo"><img src="./images/card_pic_001.png" alt=""></p>
+                                <h3>삼립. '초당 옥수수 미니꿀약과' 출시</h3>
+                                <p class="date">2025년 08월 22일</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p class="photo"><img src="./images/card_pic_002.png" alt=""></p>
+                                <h3>삼립, 칼로리·당 없는 ‘얼려먹는 젤리뽀 zero’ 출시</h3>
+                                <p class="date">2025년 08월 22일</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p class="photo"><img src="./images/card_pic_003.png" alt=""></p>
+                                <h3>삼립, ‘크보빵’ 1000만개 판매 돌파</h3>
+                                <p class="date">2025년 08월 22일</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p class="photo"><img src="./images/card_pic_004.png" alt=""></p>
+                                <h3>삼립. '초당 옥수수 미니꿀약과' 출시</h3>
+                                <p class="date">2025년 08월 22일</p>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="prev_next_wrap">
+                    <a href="#" class="prev"><img src="./images/arrow_next_preview.png" alt="이전"></a>
+                    <a href="#" class="next"><img src="./images/arrow_next_preview.png" alt="이전"></a>
+                </div>
+                <div class="view_all_button">
+                    <a href="#"><img src="./images/view_icon.png" alt="더보기"><span>view all news</span></a>
+                </div>
+            </ul>
+        </main>
+        <footer>
+            <div class="top">
+                <div class="menu">
+                    <a href="#"><span>개인정보 처리방침</span></a>
+                    <a href="#"><span>영상정보처리기기 운영관리방침</span></a>
+                    <a href="#"><span>거래희망회사 사전등록</span></a>
+                    <a href="#"><span>동반성장</span></a>
+                    <img src="./images/customer.png" alt="소비자중심CCM">
+                </div>
+                <ul name="site" id="site">
+                    <li>
+                        <p>FAMILY SITE</p>
+                        <ul class="family_list">
+                            <li><a href="#">PALIS BAGUETEE</a></li>
+                            <li><a href="#">BASKIN ROBBINS</a></li>
+                            <li><a href="#">DUNKIN</a></li>
+                            <li><a href="#">PARIS CORISSANT</a></li>
+                            <li><a href="#">PALIS BAGUETEE</a></li>
+                            <li><a href="#">BASKIN ROBBINS</a></li>
+                            <li><a href="#">DUNKIN</a></li>
+                            <li><a href="#">PARIS CORISSANT</a></li>
+                            <li><a href="#">PALIS BAGUETEE</a></li>
+                            <li><a href="#">BASKIN ROBBINS</a></li>
+                            <li><a href="#">DUNKIN</a></li>
+                            <li><a href="#">PARIS CORISSANT</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <p>SITE MAP</p>
+                        <div class="sitemap_wrap">
+                            <div class="sitemap_contents">
+                                <h2>SITE MAP</h2>
+                                <button type="button" class="close">X</button>
+                                <!-- 사이트 맵 목록 작성위치 -->
+                            </div>
                         </div>
-                    </div>
-                    <div class="prev_next_wrap">
-                        <a href="#" class="prev"><img src="./images/arrow_next_preview.png" alt="이전"></a>
-                        <a href="#" class="next"><img src="./images/arrow_next_preview.png" alt="이전"></a>
-                    </div>
-                    <div class="view_all_button">
-                        <a href="#"><img src="./images/view_icon.png" alt="더보기"><span>view all news</span></a>
-                    </div>
+                    </li>
                 </ul>
             </div>
-        </main>
+            <div class="company_info">
+                <address class="com_ad">
+                    Customer Service 전화번호 080-739-8572 (월~금 09:00~17:00)<br>
+                    101, Gongdan 1-daero, Siheung-si, Gyeonggi-do, Republic of Korea ㈜SPC삼립 대표이사 황종현
+                </address>
+                <p id="copy">
+                    &copy; SPC Samlip. All rights reserved.
+                </p>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
