--- a/figma_layout/samlip/company.html
+++ b/figma_layout/samlip/company.html
@@ -87,6 +87,8 @@
                 </ul>
             </div>
         </main>
+        <!-- 공용 footer php위치 -->
+        <? phn include('./footer.php') ?>
     </div>
 </body>
 </html>
