index 메인화면 링크 추가

--- a/figma_layout/samlip/index.html
+++ b/figma_layout/samlip/index.html
@@ -128,7 +128,7 @@
             </ul>
         </main>
         <!-- 공용 footer php -->
-         <?php include(./footer.php') ?>
+        <?php include('./footer.php') ?>
     </div>
 </body>
 </html>
