--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
             <ul class="result">
                 <li><img src="./figma_layout/images/arrow.png" alt="바로가기"><a href="./task/encykorea_250812.html">대백과사전 HTML</a></li>
                 <li><img src="./figma_layout/images/arrow.png" alt="바로가기"><a href="./task/musescore_login.html">Musescore login HTML</a></li>
+                <li><img src="./figma_layout/images/arrow.png" alt="바로가기"><a href="./figma_layout/samlip/index.html">SPC 삼ㄹ힙 HTML</a></li>
             </ul>
         </main>
         <footer>
