--- a/figma_layout/samlip/company.html
+++ b/figma_layout/samlip/company.html
@@ -88,7 +88,7 @@
             </div>
         </main>
         <!-- 공용 footer php위치 -->
-        <? phn include('./footer.php') ?>
+        <?php include('./footer.php') ?>
     </div>
 </body>
 </html>
