--- a/level2/animation-example/2-1-math/look_index.html
+++ b/level2/animation-example/2-1-math/look_index.html
@@ -25,30 +25,42 @@
 
         main #visual #deco .obj1 {
             top:170px; left:50%; margin-left:-342px;
+            /* 중앙 */
+            animation: rotate 10s linear infinite;
         }
         main #visual #deco .obj2 {
             left:0; top:150px;
+            animation: size 1.5s linear infinite;
         }
         main #visual #deco .obj3 {
             left:100px; top:250px;
+            animation: rotate 8s linear infinite;
         }
         main #visual #deco .obj4 {
             left:150px; top:350px;
+            animation: size 1.5s linear infinite;
         }
         main #visual #deco .obj5 {
             right:0; top:150px;
+            animation: rotate 8s linear alternate-reverse infinite;
         }
         main #visual #deco .obj6 {
             right:200px; top:250px;
+            animation: rotate 10s linear infinite;
+            transform: rotate(-10px);
         }
         main #visual #deco .obj7 {
             right:200px; top:240px;
+            animation: size 1.5s linear infinite;
         }
         main #visual #deco .obj8 {
             left:270px; top:440px;
+            animation: rotate 8s linear infinite;
+            transform: rotate(10px);
         }
         main #visual #deco .obj9 {
             right:0; top:440px;
+            animation: size 1.5s linear infinite;
         }
 
         main #book_center {
@@ -69,6 +81,24 @@
         main .category a.active {background:#26bad7; color:#fff;}
 
         /* 애니메이션 */
+        @keyframes rotate {
+            0% {transform: rotate(0);
+            }
+            100% {
+                transform: rotate(-20deg);
+            }
+        }
+        @keyframes size {
+            0% {
+                scale: 1;
+            }
+            50% {
+                scale: 1.2;
+            }
+            100% {
+                scale: 1;
+            }
+        }
 
     </style>
 </head>
