--- a/level2/animation-example/2-1-math/do_index.html
+++ b/level2/animation-example/2-1-math/do_index.html
@@ -35,16 +35,46 @@
         /* 
         1(주황선) 2(책) 3(문어) 4(벌) 5(꽃병) 6(별1) 7(별2)
         */
-        main #deco .obj1 {z-index:9; right:0;}
-        main #deco .obj2 {z-index:10; top:-100px; left:-50px;}
-        main #deco .obj3 {z-index:9; right:190px; top:0;}
-        main #deco .obj4 {z-index:11; right:0; bottom:0;}
-        main #deco .obj5 {z-index:11; right:150px; bottom:0;}
-        main #deco .obj6 {z-index:12; left:-50px; bottom:100px;}
-        main #deco .obj7 {z-index:12; right:50px; top:-30px;}
+        main #deco .obj1 {z-index:9; right:0;
+            animation: rotate 3s linear alternate infinite;}
+        main #deco .obj2 {
+            z-index:10; top:-100px; left:-50px;
+            animation: move_book 0.5s both;}
+        main #deco .obj3 {z-index:9; right:190px; top:0;
+            animation: move_octo 0.5s both;
+        }
+        main #deco .obj4 {z-index:11; right:0; bottom:0;
+            transform-origin: center;
+            animation: move_bee 0.5s both;
+        }
+        main #deco .obj5 {z-index:11; right:150px; bottom:0;
+            animation: rotate 3s linear alternate-reverse infinite;}
+        main #deco .obj6 {z-index:12; left:-50px; bottom:100px;
+            animation: scale 2s linear alternate infinite;}
+        main #deco .obj7 {z-index:12; right:50px; top:-30px;
+            animation: scale 2s linear alternate infinite;}
         
         /* 애니메이션 */
-        
+        @keyframes move_book {
+            0%{transform:translate(100px,0);}
+            100%{transform:translate(0, 0);}
+        }
+        @keyframes move_octo {
+            0%{transform:translate(0,0);}
+            100%{transform:translate(0, -130px);}
+        }
+        @keyframes move_bee {
+            0%{  transform: translate(0,0);}
+            100%{ transform: translate(-350px, 100px); }
+        }
+        @keyframes rotate {
+            0% {transform: rotate(-10deg);}
+            100% {transform: rotate(10deg);}
+        }
+        @keyframes scale {
+            0% {transform: scale(1);}
+            100% {transform: scale(1.4)}
+        }
 
     </style>
 </head>
