--- a/level2/animation-example/2-2-bmw/index.html
+++ b/level2/animation-example/2-2-bmw/index.html
@@ -8,9 +8,13 @@
     <link rel="stylesheet" href="reset.css">
     <style>
         #wrap {
-            width:100%; /* height:100vh; */
+            width: 100%; /* height:100vh; */
             background:url(images/bmw_bg.jpg);
-            position:relative;
+            position: relative;
+            height: 100vh;
+            background-size: cover;
+            background-position-y: -300px;
+            background-repeat: no-repeat;
         }
         header {
             width:1200px; margin:0 auto; padding:30px 0;
@@ -21,17 +25,26 @@
             border-bottom:1px solid rgba(255,255,255,0.2);
             width:80%; margin:0 auto; display:flex; justify-content:space-around;
         }
-        header nav a {padding:10px 0; position:relative;}
-        header nav a::after {
-            content:''; display:block;
-            width:100%; height:1px; background:#cae4ff;
-            position:absolute; bottom:-1px;
+        
+        header nav a {padding:10px 0; position:relative; color: #fff;}
+        
+        header nav a:hover::after{
+            display: block;
+            transform: scaleX(1);
+            transition: transform 1s;
         }
 
-        main {position:relative; width:1400px; height:80vh; margin:0 auto;}
+        header nav a::after {
+            content:''; display:none;
+            width:100%; height:1px; background:#cae4ff;
+            position:absolute; bottom:-1px;
+            transform: scaleX(0);
+        }
+
         main img {
             position:absolute; left:0; bottom:100px;
         }
+        /* animation */
 
     </style>
     <script>
