--- a/level2/animation-example/2-3-star/index.html
+++ b/level2/animation-example/2-3-star/index.html
@@ -20,7 +20,8 @@
             display:flex; justify-content:flex-start;
             padding:20px 0;
         }
-        main .category_menu a {position:relative; font-size:0.91rem; letter-spacing:-0.5px;}
+        main .category_menu a {position:relative; font-size:0.91rem;
+            letter-spacing:-0.5px;}
         main .category_menu a:nth-child(even) {margin:0 20px;}
         /* 커피메뉴리스트 */
         #menu_title {
@@ -35,7 +36,13 @@
         .menu_contents .menu {
             display:flex; justify-content:space-between;
             position:absolute; left:0; top:0;
+            display: none;
         }
+
+        .menu_contents .menu:nth-child(1) {
+            display:flex;
+        }
+
         .menu_contents .menu a {
             margin-right:10px; overflow:hidden; position:relative;
             border-radius:10px; 
@@ -45,15 +52,16 @@
         /* 커피정보 */
         .menu_contents .menu .info {
             background:rgba(0,102,51,0.8); /*#006633 == rgb(0,102,051)*/
-            color:#fff;
             width:100%; height:100%; display:block;
             position:absolute; left:0; top:0;
             text-align:center;
+            display: none;
         }
+        .menu_contents .menu img:hover + span {display : block}
         .menu_contents .menu .info span:first-child {padding-top:40%;}
         .menu_contents .menu .info span {
             display:block; font-weight: 600;
-            line-height:1.5;
+            line-height:1.5; color: #fff;
         }
         /* active class + animation */
         .active {font-weight:800;}
