중간세이브

--- a/level2/animation-example/2-4-shopping/index.html
+++ b/level2/animation-example/2-4-shopping/index.html
@@ -22,8 +22,20 @@
             display:flex; justify-content:space-between;
             flex-flow:column wrap;
         }
-        main section a .img img {width:100%; border-radius:3px;}
-        main section a:hover .img img {}
+        
+        main section a .img {/* w:100%; h:max-content로 인식한 상태 */
+            height: 294px;
+            overflow: hidden;
+        }
+
+        main section a .img img {
+            width:100%; border-radius:3px;
+            transition: transform 0.3s;
+            transform-origin: center top;
+            
+        }
+        main section a:hover .img img {
+            transform: scale(1.2);}
         /* 상품 내용 디자인 상세 */
         main a > span {font-size:0.91rem; letter-spacing:-0.5px; line-height:1.5;}
         main a .name {padding:0 0 5px; margin:0 0 5px; border-bottom:1px solid #ccc;}
