--- a/level2/animation-example/3-2-lg/index.html
+++ b/level2/animation-example/3-2-lg/index.html
@@ -42,7 +42,14 @@
             background:url(images/bg_flow.png) repeat-x left top;
             height:150px; width:100%;
             position:absolute; z-index:30;
+            animation: back 20s linear infinite;
         }
+
+        @keyframes back {
+            0% {background-position-x: 0;}
+            100% {background-position-x: -275%;}
+        }
+
     </style>
 </head>
 <body>
