--- a/level2/animation-example/3-3-text-gradient/index.html
+++ b/level2/animation-example/3-3-text-gradient/index.html
@@ -13,10 +13,12 @@
             margin:0 auto; font-weight:700; 
             font-size:5rem; text-align: center;
             background: linear-gradient(to right, #ff00ff, #00ffff, #ff00ff);
+            background-size: 300%;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
             color: transparent;
+            animation: bg-gradient 6s linear infinite;
         }
         main h2 {
             font-family: 'Black Ops One';
@@ -28,15 +30,17 @@
             background-clip: text;
             color: transparent;
         }
-        p {width:30px;}
+        p {width:30px; filter: invert(1);}
         p img {width:100%;}
-        p:nth-child(1) img {}
+        p:nth-child(1) img {transform: scaleY(-1);}
         footer {position:fixed; bottom:50px; right:50px;}
         footer img {width:24px;}
-        footer img:nth-child(1) {margin-right:10px;}
+        footer img:nth-child(1) {margin-right:10px;
+        filter: invert(1);
+        }
         @keyframes bg-gradient {
-            0% {}
-            100% {}
+            0% {background-position-x: 0;}
+            100% {background-position-x: 300%;}
         }
     </style>
 </head>
