--- a/index.html
+++ b/index.html
@@ -105,13 +105,14 @@
                 <li><img src="./figma_layout/images/arrow.png" alt="바로가기"><a href="./figma_layout/form/market_join/join.html" target="_blank">마켓컬리 회원가입</a></li>
                 <li><img src="./figma_layout/images/arrow.png" alt="바로가기"><a href="./figma_layout/ohou/index.html" target="_blank">오늘의 집 회원가입</a></li>
                 <li><img src="./figma_layout/images/arrow.png" alt="바로가기"><a href="./figma_layout/samlip/index.html" target="_blank">삼립 메인페이지</a></li>
+                <li><img src="./figma_layout/images/arrow.png" alt="바로가기"><a href="https://tsuroki.github.io/project_wwf/" target="_blank">WWF 북극곰 보호단체</a></li>
             </ul>
             <h2>과제제출!</h2>
             <ul class="result">
                 <li><img src="./figma_layout/images/arrow.png" alt="바로가기"><a href="./task/encykorea_250812.html">대백과사전</a></li>
                 <li><img src="./figma_layout/images/arrow.png" alt="바로가기"><a href="./task/musescore_login.html">Musescore login</a></li>
                 <li><img src="./figma_layout/images/arrow.png" alt="바로가기"><a href="./figma_layout/samlip/index.html">SPC 삼립</a></li>
-                <li><img src="./figma_layout/images/arrow.png" alt="바로가기"><a href="https://tsuroki.github.io/project_wwf/" target="_blank">WWF 북극곰 보호단체</a></li>
+                <li><img src="./figma_layout/images/arrow.png" alt="바로가기"><a href="https://www.figma.com/proto/oX8wBXkCZI78sbR8MZfJav/%EB%A7%A5%EB%8F%84%EB%82%A0%EB%93%9C-%EC%95%B1-%EB%A6%AC%EB%94%94%EC%9E%90%EC%9D%B8?node-id=39-268&t=tdoloFvcua9EbJAX-1">SPC 삼립</a></li>
             </ul>
         </main>
         <footer>
